# BrownianLongRange

./: .gitignore  CMakeLists.txt
src/: ewald.cpp  ewald.h  main.cpp  observables.cpp  observables.h  simul.cpp  simul.h  state.cpp  state.h  visu2d.cpp  visu2d.h  visu3d.cpp  visu3d.h
test/: Makefile  test_change_alpha.cpp  timing.cpp
